Fixed translation files. Added missing ja_jp translation entries. Smaller code optimization.